--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .card {
+        background-color: theme('colors.white');
+        border-radius: theme('borderRadius.lg');
+        padding: theme('spacing.6');
+        box-shadow: theme('boxShadow.lg');
+    }
+    .input {
+        @apply focus:ring-indigo-500 focus:border-indigo-500 focus:outline-indigo-500 border-gray-300;
+    }
+    .input-error {
+        @apply focus:ring-red-500 focus:border-red-500 focus:outline-red-500 border-red-300;
+    }
+}
