--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -6,5 +6,6 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         link(href=assetsPath('main.css') rel="stylesheet")
         title Document
-    body#app
+    body.bg-gray-100
+        #root
         script(src=assetsPath('main.js'))
